--- a/index.html
+++ b/index.html
@@ -14,19 +14,20 @@
 </head>
 
 <body>
-    
+   
     <nav>
         
-        <ul>
+        <ul id="menu">
         <li ><a href="#home">Home</a> </p>
-        <li ><a href="">Acerca de mi</a> </p>
+        <li ><a href="#home">Acerca de mi</a> </p>
         <li > <a href="#skills">Mis habilidades</a> </p>
         <li > <a href="#experience"> Experiencia</a></p>
         <li ><a href="#briefcase">Portafolio</a> </p>
         <li ><a href="#contact"> Contacto</a></li>
         </ul>
-   
-        <img src="/img/lineas.PNG" alt="">
+        <div id="icon__lines" class="icon__lines icon__burger-show">
+            <img src="/img/lineas.png" alt="">
+        </div>
     </nav>
     <div class="header" id="home">
         <div class="header_text">
@@ -158,7 +159,7 @@
     <footer>
         <h4>Hecho con <img src="/img/corazon.png" alt=""> en Academlo</h4>
     </footer>
-
+    <script src="./main.js"></script>
 </body>
 
 </html>
